removing usage of sun.misc.BASE64Encoder